minor adjustment for mojo documentation rendering